; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_xattr_find_position.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_ext_attr.c_xattr_find_position.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_xattr = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ext2_xattr*, i32, i8*)* @xattr_find_position to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xattr_find_position(%struct.ext2_xattr* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.ext2_xattr*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ext2_xattr*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.ext2_xattr* %0, %struct.ext2_xattr** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @find_ea_index(i8* %15, i8** %9, i32* %11)
  %17 = load i8*, i8** %9, align 8
  %18 = call i32 @strlen(i8* %17)
  store i32 %18, i32* %13, align 4
  store i32 0, i32* %8, align 4
  %19 = load %struct.ext2_xattr*, %struct.ext2_xattr** %4, align 8
  store %struct.ext2_xattr* %19, %struct.ext2_xattr** %7, align 8
  br label %20

20:                                               ; preds = %58, %3
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %63

24:                                               ; preds = %20
  %25 = load %struct.ext2_xattr*, %struct.ext2_xattr** %7, align 8
  %26 = getelementptr inbounds %struct.ext2_xattr, %struct.ext2_xattr* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = call i32 @find_ea_index(i8* %27, i8** %10, i32* %12)
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %12, align 4
  %31 = icmp slt i32 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %24
  br label %63

33:                                               ; preds = %24
  %34 = load i32, i32* %11, align 4
  %35 = load i32, i32* %12, align 4
  %36 = icmp sgt i32 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %33
  br label %58

38:                                               ; preds = %33
  %39 = load i8*, i8** %10, align 8
  %40 = call i32 @strlen(i8* %39)
  store i32 %40, i32* %14, align 4
  %41 = load i32, i32* %13, align 4
  %42 = load i32, i32* %14, align 4
  %43 = icmp slt i32 %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %38
  br label %63

45:                                               ; preds = %38
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* %14, align 4
  %48 = icmp sgt i32 %46, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %45
  br label %58

50:                                               ; preds = %45
  %51 = load i8*, i8** %9, align 8
  %52 = load i8*, i8** %10, align 8
  %53 = load i32, i32* %13, align 4
  %54 = call i64 @memcmp(i8* %51, i8* %52, i32 %53)
  %55 = icmp sle i64 %54, 0
  br i1 %55, label %56, label %57

56:                                               ; preds = %50
  br label %63

57:                                               ; preds = %50
  br label %58

58:                                               ; preds = %57, %49, %37
  %59 = load i32, i32* %8, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %8, align 4
  %61 = load %struct.ext2_xattr*, %struct.ext2_xattr** %7, align 8
  %62 = getelementptr inbounds %struct.ext2_xattr, %struct.ext2_xattr* %61, i32 1
  store %struct.ext2_xattr* %62, %struct.ext2_xattr** %7, align 8
  br label %20

63:                                               ; preds = %56, %44, %32, %20
  %64 = load i32, i32* %8, align 4
  ret i32 %64
}

declare dso_local i32 @find_ea_index(i8*, i8**, i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
